Refactored inject maven-plugin Fixed most of build issues.
Signed-off-by: Tomas Langer <tomas.langer@oracle.com>