@@ -20,18 +20,20 @@ import java.io.Serializable;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Optional;
+import java.util.function.Supplier;
 import java.util.stream.Collectors;
 
 import io.helidon.common.types.TypeName;
-import io.helidon.config.Config;
-import io.helidon.inject.api.ActivationResult;
-import io.helidon.inject.api.InjectionServices;
-import io.helidon.inject.api.ModuleComponent;
-import io.helidon.inject.api.Qualifier;
-import io.helidon.inject.api.RunLevel;
-import io.helidon.inject.api.ServiceInfoCriteria;
-import io.helidon.inject.api.ServiceProvider;
-import io.helidon.inject.api.Services;
+import io.helidon.inject.ActivationResult;
+import io.helidon.inject.InjectionConfig;
+import io.helidon.inject.InjectionServices;
+import io.helidon.inject.Lookup;
+import io.helidon.inject.ServiceProvider;
+import io.helidon.inject.Services;
+import io.helidon.inject.service.Injection;
+import io.helidon.inject.service.ModuleComponent;
+import io.helidon.inject.service.Qualifier;
 import io.helidon.inject.testing.InjectionTestingSupport;
 import io.helidon.inject.tests.inject.ASerialProviderImpl;
 import io.helidon.inject.tests.inject.ClassNamedY;
@@ -42,18 +44,18 @@ import io.helidon.inject.tests.inject.stacking.CommonContract;
 import io.helidon.inject.tests.inject.tbox.impl.BigHammer;
 import io.helidon.inject.tests.inject.tbox.impl.HandSaw;
 import io.helidon.inject.tests.inject.tbox.impl.MainToolBox;
-import io.helidon.inject.tools.Options;
+import io.helidon.metrics.api.Counter;
+import io.helidon.metrics.api.MeterRegistry;
+import io.helidon.metrics.api.Metrics;
 
-import jakarta.inject.Provider;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
+import static io.helidon.common.testing.junit5.OptionalMatcher.optionalPresent;
 import static io.helidon.common.types.TypeName.create;
 import static io.helidon.inject.testing.InjectionTestingSupport.resetAll;
 import static io.helidon.inject.testing.InjectionTestingSupport.testableServices;
-import static io.helidon.inject.tests.inject.TestUtils.loadStringFromFile;
-import static io.helidon.inject.tests.inject.TestUtils.loadStringFromResource;
 import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.CoreMatchers.not;
@@ -68,16 +70,18 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
  * Expectation here is that the annotation processor ran, and we can use standard injection and di registry services, etc.
  */
 class ToolBoxTest {
-    Config config = InjectionTestingSupport.basicTestableConfig();
-    InjectionServices injectionServices;
-    Services services;
+    private static final MeterRegistry METER_REGISTRY = Metrics.globalRegistry();
+
+    private final InjectionConfig config = InjectionTestingSupport.basicTestableConfig();
+    private InjectionServices injectionServices;
+    private Services services;
 
     @BeforeEach
     void setUp() {
         setUp(config);
     }
 
-    void setUp(Config config) {
+    void setUp(InjectionConfig config) {
         this.injectionServices = testableServices(config);
         this.services = injectionServices.services();
     }
@@ -95,13 +99,17 @@ class ToolBoxTest {
 
     @Test
     void toolbox() {
-        List<ServiceProvider<Awl>> blanks = services.lookupAll(Awl.class);
+        List<ServiceProvider<Awl>> blanks = services.allProviders(Lookup.builder()
+                                                                              .addContract(Awl.class)
+                                                                              .build());
         List<String> desc = blanks.stream().map(ServiceProvider::description).collect(Collectors.toList());
         // note that order matters here
         assertThat(desc,
                    contains("AwlImpl:INIT"));
 
-        List<ServiceProvider<ToolBox>> allToolBoxes = services.lookupAll(ToolBox.class);
+        List<ServiceProvider<ToolBox>> allToolBoxes = services.allProviders(Lookup.builder()
+                                                                                        .addContract(ToolBox.class)
+                                                                                        .build());
         desc = allToolBoxes.stream().map(ServiceProvider::description).collect(Collectors.toList());
         assertThat(desc,
                    contains("MainToolBox:INIT"));
@@ -112,31 +120,31 @@ class ToolBoxTest {
         assertThat(mtb.postConstructCallCount, equalTo(1));
         assertThat(mtb.preDestroyCallCount, equalTo(0));
         assertThat(mtb.setterCallCount, equalTo(1));
-        List<Provider<Tool>> allTools = mtb.toolsInBox();
+        List<Supplier<Tool>> allTools = mtb.toolsInBox();
         desc = allTools.stream().map(Object::toString).collect(Collectors.toList());
         assertThat(desc,
                    contains("SledgeHammer:INIT",
-                            "BigHammer:INIT",
                             "TableSaw:INIT",
                             "AwlImpl:INIT",
                             "HandSaw:INIT",
-                            "LittleHammer:INIT",
-                            "Screwdriver:ACTIVE"));
+                            "Screwdriver:ACTIVE",
+                            "BigHammer:INIT",
+                            "LittleHammer:INIT"));
         assertThat(mtb.screwdriver(), notNullValue());
 
-        Provider<Hammer> hammer = Objects.requireNonNull(toolBox.preferredHammer());
+        Supplier<Hammer> hammer = Objects.requireNonNull(toolBox.preferredHammer());
         assertThat(hammer.get(), notNullValue());
         assertThat(hammer.get(), is(hammer.get()));
         assertThat(BigHammer.class, equalTo(hammer.get().getClass()));
         desc = allTools.stream().map(Object::toString).collect(Collectors.toList());
         assertThat(desc,
                    contains("SledgeHammer:INIT",
-                            "BigHammer:ACTIVE",
                             "TableSaw:INIT",
                             "AwlImpl:INIT",
                             "HandSaw:INIT",
-                            "LittleHammer:INIT",
-                            "Screwdriver:ACTIVE"));
+                            "Screwdriver:ACTIVE",
+                            "BigHammer:ACTIVE",
+                            "LittleHammer:INIT"));
 
         desc = (((MainToolBox) toolBox).allHammers()).stream().map(Object::toString).collect(Collectors.toList());
         assertThat(desc,
@@ -144,79 +152,79 @@ class ToolBoxTest {
                             "BigHammer:ACTIVE",
                             "LittleHammer:INIT"));
         assertThat(((ServiceProvider<?>) ((MainToolBox) toolBox).bigHammer()).description(),
-                equalTo("BigHammer:ACTIVE"));
+                   equalTo("BigHammer:ACTIVE"));
     }
 
     @Test
     void testClasses() {
-        assertThat(services.lookupFirst(TestingSingleton.class),
+        assertThat(services.first(TestingSingleton.class),
                    notNullValue());
+        assertThat(services.first(TestingSingleton.class),
+                   optionalPresent());
     }
 
     /**
-     * This assumes {@link Options#TAG_AUTO_ADD_NON_CONTRACT_INTERFACES} has
+     * This assumes {@link io.helidon.inject.codegen.InjectOptions#AUTO_ADD_NON_CONTRACT_INTERFACES} has
      * been enabled - see pom.xml
      */
     @Test
     void autoExternalContracts() {
-        List<ServiceProvider<Serializable>> allSerializable = services.lookupAll(Serializable.class);
+        List<ServiceProvider<Serializable>> allSerializable = services.allProviders(Lookup.builder()
+                                                                                                .addContract(Serializable.class)
+                                                                                                .build());
         List<String> desc = allSerializable.stream().map(ServiceProvider::description).collect(Collectors.toList());
         // note that order matters here
         assertThat(desc,
-                contains("ASerialProviderImpl:INIT", "Screwdriver:INIT"));
+                   contains("ASerialProviderImpl:INIT", "Screwdriver:INIT"));
     }
 
     @Test
     void providerTest() {
-        Serializable s1 = services.lookupFirst(Serializable.class).get();
+        Serializable s1 = services.get(Serializable.class).get();
         assertThat(s1, notNullValue());
         assertThat(ASerialProviderImpl.class + " is a higher weight and should have been returned for " + String.class,
                    String.class, equalTo(s1.getClass()));
-        assertThat(services.lookupFirst(Serializable.class).get(), not(s1));
+        assertThat(services.get(Serializable.class).get(), not(s1));
     }
 
     @Test
     void modules() {
-        List<ServiceProvider<ModuleComponent>> allModules = services.lookupAll(ModuleComponent.class);
-        List<String> desc = allModules.stream().map(ServiceProvider::description).collect(Collectors.toList());
+        List<ServiceProvider<ModuleComponent>> allModules = services.allProviders(
+                Lookup.builder()
+                        .addContract(ModuleComponent.class)
+                        .build());
+        List<String> desc = allModules.stream()
+                .map(it -> it.id() + ":" + it.currentActivationPhase())
+                .toList();
         // note that order matters here
         // there is now config module as active as well
         assertThat("ensure that Annotation Processors are enabled in the tools module meta-inf/services",
-                   desc, contains("Injection$$Module:ACTIVE", "Injection$$Module:ACTIVE", "Injection$$TestModule:ACTIVE"));
+                   desc,
+                   contains("io.helidon.config.Injection__Module:ACTIVE",
+                                  "io.helidon.inject.configdriven.ConfigDrivenInjectModule:ACTIVE",
+                                  "io.helidon.inject.tests.inject.Injection__Module:ACTIVE",
+                                  "io.helidon.inject.tests.inject.TestInjection__Module:ACTIVE"));
         List<String> names = allModules.stream()
                 .sorted()
-                .map(m -> m.get().named().orElse(m.get().getClass().getSimpleName() + ":null")).collect(Collectors.toList());
+                .map(ServiceProvider::get)
+                .map(ModuleComponent::name)
+                .toList();
         assertThat(names,
-                   contains("io.helidon.config", "io.helidon.inject.tests.inject", "io.helidon.inject.tests.inject/test"));
-    }
-
-    /**
-     * The module-info that was created (by APT processing).
-     */
-    @Test
-    void moduleInfo() {
-        assertThat(loadStringFromFile("target/inject/classes/module-info.java.inject"),
-                   equalTo(loadStringFromResource("expected/module-info.java._inject_")));
-    }
-
-    /**
-     * The test version of module-info that was created (by APT processing).
-     */
-    @Test
-    void testModuleInfo() {
-        assertThat(loadStringFromFile("target/inject/test-classes/module-info.java.inject"),
-                   equalTo(loadStringFromResource("expected/tests-module-info.java._inject_")));
+                   contains("io.helidon.config",
+                            "io.helidon.inject.configdriven",
+                            "io.helidon.inject.tests.inject",
+                            "unnamed/io.helidon.inject.tests.inject/test"));
     }
 
     @Test
     void innerClassesCanBeGenerated() {
-        FakeServer.Builder s1 = services.lookupFirst(FakeServer.Builder.class).get();
+        FakeServer.Builder s1 = services.get(FakeServer.Builder.class).get();
         assertThat(s1, notNullValue());
-        assertThat(services.lookupFirst(FakeServer.Builder.class).get(), is(s1));
+        assertThat(services.get(FakeServer.Builder.class).get(), is(s1));
 
-        FakeConfig.Builder c1 = services.lookupFirst(FakeConfig.Builder.class).get();
+        FakeConfig.Builder c1 = services.get(FakeConfig.Builder.class).get();
         assertThat(c1, notNullValue());
-        assertThat(services.lookupFirst(FakeConfig.Builder.class).get(), is(c1));
+        assertThat(services.get(FakeConfig.Builder.class).get(), is(c1));
     }
 
     /**
@@ -225,7 +233,10 @@ class ToolBoxTest {
      */
     @Test
     void hierarchyOfInjections() {
-        List<ServiceProvider<AbstractSaw>> saws = services.lookupAll(AbstractSaw.class);
+        List<ServiceProvider<AbstractSaw>> saws = services.allProviders(
+                Lookup.builder()
+                        .addContract(AbstractSaw.class)
+                        .build());
         List<String> desc = saws.stream().map(ServiceProvider::description).collect(Collectors.toList());
         // note that order matters here
         assertThat(desc,
@@ -240,19 +251,23 @@ class ToolBoxTest {
      */
     @Test
     void runlevel() {
-        assertThat("we start with 2 because we are looking for interceptors (which there is 2 here in this module)",
-                   injectionServices.metrics().orElseThrow().lookupCount().orElseThrow(),
-                   equalTo(2));
-        List<ServiceProvider<?>> runLevelServices = services
-                .lookupAll(ServiceInfoCriteria.builder().runLevel(RunLevel.STARTUP).build(), true);
+        Counter lookupCounter = lookupCounter();
+        long initialCount = lookupCounter.count();
+
+        List<ServiceProvider<Object>> runLevelServices = services
+                .allProviders(Lookup.builder()
+                                          .runLevel(Injection.RunLevel.STARTUP)
+                                          .build());
         List<String> desc = runLevelServices.stream().map(ServiceProvider::description).collect(Collectors.toList());
         assertThat(desc,
                    contains("TestingSingleton:INIT"));
 
         runLevelServices.forEach(sp -> Objects.requireNonNull(sp.get(), sp + " failed on get()"));
-        assertThat("activation should not triggered one new lookup from startup",
-                   injectionServices.metrics().orElseThrow().lookupCount().orElseThrow(),
-                   equalTo(3));
+
+        long count = lookupCounter.count() - initialCount;
+        assertThat("activation should triggered one new lookup from startup",
+                   count,
+                   equalTo(1L));
         desc = runLevelServices.stream().map(ServiceProvider::description).collect(Collectors.toList());
         assertThat(desc,
                    contains("TestingSingleton:ACTIVE"));
@@ -263,16 +278,21 @@ class ToolBoxTest {
      */
     @Test
     void noServiceActivationRequiresLookupWhenApplicationIsPresent() {
-        List<ServiceProvider<?>> allServices = services
-                .lookupAll(ServiceInfoCriteria.builder().build(), true);
+        Counter counter = lookupCounter();
+
+        List<ServiceProvider<Object>> allServices = services
+                .allProviders(Lookup.EMPTY);
+
+        // from this point, there should be no additional lookups
+        long initialCount = counter.count();
         allServices.stream()
-                .filter(sp -> !(sp.isProvider()))
+                .filter(it -> !it.isProvider())
                 .forEach(sp -> {
                     sp.get();
                     assertThat("activation should not have triggered any lookups (for singletons): "
-                                       + sp + " triggered lookups", injectionServices.metrics().orElseThrow().lookupCount(),
-                               equalTo(1));
-        });
+                                       + sp + " triggered lookups", counter.count(),
+                               equalTo(initialCount));
+                });
     }
 
     @Test
@@ -280,82 +300,94 @@ class ToolBoxTest {
         assertThat(TestingSingleton.postConstructCount(), equalTo(0));
         assertThat(TestingSingleton.preDestroyCount(), equalTo(0));
 
-        List<ServiceProvider<CommonContract>> allInterceptedBefore = services.lookupAll(CommonContract.class);
+        List<ServiceProvider<CommonContract>> allInterceptedBefore = services.allProviders(
+                Lookup.builder()
+                        .addContract(CommonContract.class)
+                        .build());
         assertThat(allInterceptedBefore.size(), greaterThan(0));
         assertThat(TestingSingleton.postConstructCount(), equalTo(0));
         assertThat(TestingSingleton.preDestroyCount(), equalTo(0));
         allInterceptedBefore.forEach(ServiceProvider::get);
 
-        TestingSingleton testingSingletonFromLookup = services.lookup(TestingSingleton.class).get();
+        TestingSingleton testingSingletonFromLookup = services.get(TestingSingleton.class).get();
         assertThat(testingSingletonFromLookup, notNullValue());
         assertThat(TestingSingleton.postConstructCount(), equalTo(1));
         assertThat(TestingSingleton.preDestroyCount(), equalTo(0));
 
-        Map<TypeName, ActivationResult> map = injectionServices.shutdown().orElseThrow();
+        Map<TypeName, ActivationResult> map = injectionServices.shutdown();
         Map<TypeName, String> report = map.entrySet().stream()
                 .collect(Collectors.toMap(Map.Entry::getKey,
                                           e -> e.getValue().startingActivationPhase().toString()
                                                   + "->" + e.getValue().finishingActivationPhase()));
-        assertThat(report, hasEntry(create("io.helidon.inject.tests.inject.Injection$$Application"), "ACTIVE->DESTROYED"));
-        assertThat(report, hasEntry(create("io.helidon.inject.tests.inject.Injection$$Module"), "ACTIVE->DESTROYED"));
-        assertThat(report, hasEntry(create("io.helidon.inject.tests.inject.Injection$$TestApplication"), "ACTIVE->DESTROYED"));
-        assertThat(report, hasEntry(create("io.helidon.inject.tests.inject.Injection$$TestModule"), "ACTIVE->DESTROYED"));
-        assertThat(report, hasEntry(create("io.helidon.inject.tests.inject.stacking.MostOuterCommonContractImpl"), "ACTIVE->DESTROYED"));
-        assertThat(report, hasEntry(create("io.helidon.inject.tests.inject.stacking.OuterCommonContractImpl"), "ACTIVE->DESTROYED"));
+
+        assertThat(report, hasEntry(create("io.helidon.inject.tests.inject.Injection__Application"), "ACTIVE->DESTROYED"));
+        assertThat(report,
+                   hasEntry(create("io.helidon.inject.tests.inject.Injection__Module"), "ACTIVE->DESTROYED"));
+        assertThat(report,
+                   hasEntry(create("io.helidon.inject.tests.inject.TestInjection__Application"), "ACTIVE->DESTROYED"));
+        assertThat(report,
+                   hasEntry(create("io.helidon.inject.tests.inject.TestInjection__Module"), "ACTIVE->DESTROYED"));
+        assertThat(report,
+                   hasEntry(create("io.helidon.inject.tests.inject.stacking.MostOuterCommonContractImpl"), "ACTIVE->DESTROYED"));
+        assertThat(report,
+                   hasEntry(create("io.helidon.inject.tests.inject.stacking.OuterCommonContractImpl"), "ACTIVE->DESTROYED"));
         assertThat(report, hasEntry(create("io.helidon.inject.tests.inject.stacking.CommonContractImpl"), "ACTIVE->DESTROYED"));
         assertThat(report, hasEntry(create("io.helidon.inject.tests.inject.TestingSingleton"), "ACTIVE->DESTROYED"));
-        // ConfigProducer is the 9th
-        assertThat(report + " : expected 9 services to be present", report.size(), equalTo(9));
+        assertThat(report,
+                   hasEntry(create("io.helidon.inject.configdriven.ConfigDrivenInjectModule"), "ACTIVE->DESTROYED"));
+        assertThat(report, hasEntry(create("io.helidon.config.Injection__Module"), "ACTIVE->DESTROYED"));
+        assertThat(report, hasEntry(create("io.helidon.config.ConfigProducer"), "ACTIVE->DESTROYED"));
+        assertThat(report, hasEntry(create("io.helidon.inject.Services"), "ACTIVE->DESTROYED"));
+
+        assertThat(report + " : expected 10 services to be present", report.size(), equalTo(12));
 
         assertThat(TestingSingleton.postConstructCount(), equalTo(1));
         assertThat(TestingSingleton.preDestroyCount(), equalTo(1));
 
-        assertThat(injectionServices.metrics().orElseThrow().lookupCount().orElse(0), equalTo(0));
-
         tearDown();
         setUp();
-        TestingSingleton testingSingletonFromLookup2 = injectionServices.services().lookup(TestingSingleton.class).get();
+        TestingSingleton testingSingletonFromLookup2 = injectionServices.services().get(TestingSingleton.class).get();
         assertThat(testingSingletonFromLookup2, not(testingSingletonFromLookup));
 
-        map = injectionServices.shutdown().orElseThrow();
+        map = injectionServices.shutdown();
         report = map.entrySet().stream()
                 .collect(Collectors.toMap(Map.Entry::getKey,
                                           e2 -> e2.getValue().startingActivationPhase().toString()
                                                   + "->" + e2.getValue().finishingActivationPhase()));
         // now contains config as well
-        assertThat(report.toString(), report.size(), is(9));
+        assertThat(report.toString(), report.size(), is(12));
 
         tearDown();
-        map = injectionServices.shutdown().orElseThrow();
+        map = injectionServices.shutdown();
         assertThat(map.toString(), map.size(), is(0));
     }
 
     @Test
     void knownProviders() {
-        List<ServiceProvider<?>> providers = services.lookupAll(
-                ServiceInfoCriteria.builder().addContractImplemented(Provider.class).build());
+        List<ServiceProvider<Object>> providers = services.allProviders(
+                Lookup.builder().addContract(Supplier.class).build());
         List<String> desc = providers.stream().map(ServiceProvider::description).collect(Collectors.toList());
         // note that order matters here (weight ranked)
         assertThat(desc,
-                contains("ASerialProviderImpl:INIT",
-                         "MyServices$MyConcreteClassContractPerRequestIPProvider:INIT",
-                         "MyServices$MyConcreteClassContractPerRequestProvider:INIT",
-                         "BladeProvider:INIT"));
+                   contains("ASerialProviderImpl:INIT",
+                            "MyServices.MyConcreteClassContractPerRequestIPProvider:INIT",
+                            "MyServices.MyConcreteClassContractPerRequestProvider:INIT",
+                            "BladeProvider:INIT"));
     }
 
     @Test
     void classNamed() {
-        List<ServiceProvider<?>> providers = services.lookupAll(
-                ServiceInfoCriteria.builder()
+        List<ServiceProvider<Object>> providers = services.allProviders(
+                Lookup.builder()
                         .addQualifier(Qualifier.createNamed(ClassNamedY.class))
                         .build());
         List<String> desc = providers.stream().map(ServiceProvider::description).collect(Collectors.toList());
         assertThat(desc,
-                   contains("YImpl$$Injection$$Interceptor:INIT",
+                   contains("YImpl:INIT",
                             "BladeProvider:INIT"));
 
-        providers = services.lookupAll(
-                ServiceInfoCriteria.builder()
+        providers = services.allProviders(
+                Lookup.builder()
                         .addQualifier(Qualifier.createNamed(ClassNamedY.class.getName()))
                         .build());
         List<String> desc2 = providers.stream().map(ServiceProvider::description).collect(Collectors.toList());
@@ -363,4 +395,9 @@ class ToolBoxTest {
                    equalTo(desc));
     }
 
+    private Counter lookupCounter() {
+        Optional<Counter> counterMeter = METER_REGISTRY.counter("io.helidon.inject.lookups", List.of());
+        assertThat(counterMeter, optionalPresent());
+        return counterMeter.get();
+    }
 }
